--- a/Project/src/main/webapp/resources/hyein/css/main.css
+++ b/Project/src/main/webapp/resources/hyein/css/main.css
@@ -54,6 +54,25 @@
 	}
 
 #logo {width: 200px;}
+
+#bm_img{
+	width: auto; height: auto;
+    max-width: 60px;
+    max-height: 60px;	
+}
+
+.profile {
+    width: 150px;
+    height: 150px; 
+    border-radius: 70%;
+    overflow: hidden;
+}
+.box {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /*----------------------------------------*/
 a[disabled], input[disabled], button[disabled], textarea[disabled] {
     cursor: not-allowed !important;
@@ -2820,12 +2839,41 @@ ul {
 }
 
 /* 댓글 */
-.reply_text {
-    padding: 20px 0;
-    border-bottom: 1px solid #ebebeb;
+#write_comment{
+    box-shadow: none;
+    outline: none;
+    margin: 0;
+    border-radius: 0;
+    padding: 0 15px;
+    line-height: 48px;
+    border: 1px solid #7C7C7C;
+    color: #7C7C7C;
+    font-size: 14px;
+    vertical-align: middle;
+    height: 100px;
+    width: 100%;
 }
 
-.sharebox__module .reply_text {
+
+.best_comment{
+    padding: 10px 0;
+    font-family: "Montserrat", sans-serif;
+    font-size: 17px;
+    color: #333;
+    
+}
+
+.comment_option dt,.cmt_item>dt{
+	display: inline-block;
+	text-align: right;
+}
+
+#comments{
+	border-top: 2px solid #cfcfcf;
+}
+
+.comment_text {
+    border-bottom: 1px solid #ebebeb;
     font-family: "Montserrat", sans-serif;
     font-size: 12px;
     font-weight: 700;
