댓글 좋아요 구현

--- a/Project/src/main/webapp/resources/hyein/css/main.css
+++ b/Project/src/main/webapp/resources/hyein/css/main.css
@@ -85,6 +85,12 @@
     object-fit: cover;
 }
 
+.reply_reco_icon {
+    width: 20px;
+    height: 20px; 
+    overflow: hidden;
+}
+
 /*----------------------------------------*/
 a[disabled], input[disabled], button[disabled], textarea[disabled] {
     cursor: not-allowed !important;
